alignment fix

--- a/components/Candidates/ConstituencyPlace/ConstituencyPlace.scss
+++ b/components/Candidates/ConstituencyPlace/ConstituencyPlace.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   text-align: center;
   overflow: hidden;
-  margin-top: 10px;
+  margin-top: 6px;
   margin-bottom: 6px;
   font-size: 0.8rem;
   &__container {
